re-organizing of features / components

--- a/app/features/login/index.html
+++ b/app/features/login/index.html
@@ -1,6 +1,6 @@
 <md-content ng-cloak ng-controller="login.controller">
     <div layout="row" layout-align="center center">
-        <md-card flex="50">
+        <md-card flex="50" id="login-panel">
             
             <md-toolbar>
                 <div class="md-toolbar-tools">
