--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
         <script src="/core/routes.js"></script>
 
         <!-- Controllers -->
-        <script src="/core/login/controller.js"></script>
-        <script src="/core/chat/controller.js"></script>
+        <script src="/core/features/login/controller.js"></script>
+        <script src="/core/features/chat/controller.js"></script>
 
         <!-- Services -->
         <script src="/core/shared/user.service.js"></script>
