channel factory, chat serivce update

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,10 @@
         <!-- Services -->
         <script src="/core/shared/session.service.js"></script>
         <script src="/core/shared/chat.service.js"></script>
-
+        
+        <!-- Factories -->
+        <script src="/core/shared/channel.factory.js"></script>
+        
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
